# sonya-adventures

./: .env  .gitignore  app.py  app_utils.py  build.linux.sh  build.sh  build.windows.sh  coin.py  compress.linux.sh  compress.windows.sh  config.py  engine.py  game_view.py  handlers.py  linux.build.sh  main.py  main_view.py  player.py  pref_view.py  pyproject.toml  setup_level.py  sound_player.py  sprites.py  windows.build.sh
.run/: Build Linux.run.xml  Build Windows.run.xml  Compress Linux.run.xml  Release Linux.run.xml  Run Game.run.xml
base/: camera.py  engine.py  level.py
components/: checkbox.py  slider.py
controllers/: controller.py  gamepad.py  keyboard.py
data/: app.tiled-session  pymunk.tmx  untitled.tmx
data/maps/: _template.tmx  _template_40x30.tmx  _template_50x40.tmx  map_1.tmx  map_10.tmx  map_11.tmx  map_12.tmx  map_13.tmx  map_14.tmx  map_15.tmx  map_16.tmx  map_17.tmx  map_18.tmx  map_19.tmx  map_2.tmx  map_20.tmx  map_21.tmx  map_22.tmx  map_23.tmx  map_3.tmx  map_4.tmx  map_5.tmx  map_6.tmx  map_7.tmx  map_8.tmx  map_9.tmx  pymunk.tmx
data/tilesets/: Bee.tsx  coin.tsx  fruit.tsx  hearts.tsx  items_.tsx  platforms.tsx  staticObjects_.tsx  summer_.tsx  winter_.tsx  world_tileset.tsx
entities/: bee.py  coin.py  fruit.py  gatherable.py  heart.py  minimap.py  sprites.py
misc/: app_utils.py  config.py  sound_player.py  timer.py
views/: game_over_view.py  game_view.py  main_view.py  pref_view.py
views/components/: button.py  checkbox.py  game_ui.py  game_ui_text.py  interactive.py  labeled.py  slider.py
